[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"                             # error handling
sha-1 = "0.10"
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
git-packetline = { version = "0.14.3", features =["blocking-io"] }
git-url-parse = "0.4.5"
tokio = {version = "1.45.1", features = ["full"]}
phf = { version = "0.12", features = ["macros"] }
once_cell = "1.21.3"
winapi = { version = "0.3.9", features = ["fileapi", "winnt"] }
